+ -> Addition
^ -> Change
- -> Removed
! -> Note

05-May-2010 Andrew Eddie
 ^ Renamed "installer" plugin group to "extension".
 ^ Added onExtensionBeforeSave and onExtensionAfterSave events to languages, modules, plugins, template styles and source.
 ^ Merged language switcher branch (Jean-Marie Simonet & Christophe Demko).
 # Fixed bugs in flash uploader (Ian MacLennan is da man!).

04-May-2010 Jean-Marie Simonet
$ Refactored ini files structure for test alphas
$ ^ A few fixes for Hathor
# Bug fixes

04-May-2010 Andrew Eddie
 ^ Merge patched to cache the query building in JModelList (Christophe Demko).
 + Merge Hathor administrator template by Andrea Tarr.
 # Fixed [#20319] beez2 overides
 ^ Merge patch [#20330] mod_status show / hide params (Phil Snell).
 ^ Added chaining support to JMail.
 ^ Renamed extension events to onExtension*
 ^ Renamed search events to onContentSearch*
 ^ Simplified JForm email and username rules.
 ^ Fix some installation controller problems.
 ^ Rename authentication events to onUserAuthenticate.
 ^ Rename user events to onUser*.
 ^ Add better form and data handling support to JModelForm.
 # Fix issue with forms and profile in frontend com_users.
 # Fix issue with forms and profile in backend com_users.
 ^ Renamed onPrepareContent event to onContentPrepare.
 ^ Renamed onBeforeContentSave and onAfterContentSave events to onContentBeforeSave and onContentAfterSave.
 ^ Renamed onAfterDisplayTitle, onBeforeDisplayContent and onAfterDisplayContent events
   to onContentAfterTitle, onContentBeforeDisplay, onContentAfterDisplay.

3-May-2010 Jean-Marie Simonet
# Fixed [20314] (Thanks Phil Snell). Added/consolidated some strings in com_messages

03-May-2010 Christophe Demko
 ^ Add an xml attribute to editor field: 'hide' to specify which buttons to hide

03-May-2010 Andrew Eddie
 ^ Merge fixes to media fields (Elin Waring)
 + Merge addition of featured contacts view (Elin Waring)
 + Merge extra fields for user profile plugin (Elin Waring)